# uptime-mesh

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  alembic.ini  go.mod  install.sh  pyproject.toml  version.json
app/: cli.py  config.py  dependencies.py  identity.py  logger.py  main.py  metrics.py  runtime.py  security.py  utils.py  versioning.py
app/models/: __init__.py  base.py  cluster_setting.py  endpoint.py  event.py  join_token.py  node.py  replica.py  router_assignment.py  service.py  snapshot_run.py  support_bundle.py
app/routes/: auth.py  cluster.py  cluster_settings.py  discovery.py  endpoints.py  etcd.py  events.py  gateway.py  monitoring.py  nodes.py  replicas.py  roles.py  router_assignments.py  scheduler.py  services.py  snapshots.py  support_bundles.py  system.py  ui.py  wireguard.py
app/schemas/: cluster.py  cluster_settings.py  discovery.py  endpoints.py  etcd.py  events.py  gateway.py  monitoring.py  nodes.py  replicas.py  roles.py  router_assignments.py  scheduler.py  services.py  snapshots.py  support_bundles.py  wireguard.py
app/services/: applications.py  auth.py  cluster.py  cluster_settings.py  config_yaml.py  discovery.py  endpoints.py  etcd.py  events.py  gateway.py  lxd.py  monitoring.py  nodes.py  rate_limits.py  replicas.py  roles.py  router_assignments.py  scheduler.py  services.py  snapshots.py  support_bundles.py
app/templates/: discovery.html  events.html  gateway.html  infrastructure.html  (+16 more)
migrations/: env.py
ops/: README.md  agent-update.sh  bootstrap.sh  install.sh  node-update.sh  update.sh  watchdog.py
(+16 files in other folders)
